# Templates

./: .gitignore  main.py  pyproject.toml
02_Notebooks/: BaseTemplate.ipynb  SQL_Base.sql  SQL_Base_v2.sql
04_Varies/Diagrams/: Hypotheses_test_diagram.drawio  Resources.url
